--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully connected to Supabase database.\n"
+     ]
+    }
+   ],
    "source": [
     "from functions import connect_to_supabase"
    ]
@@ -24,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "<connection object at 0x0000019095865AD0; dsn: 'user=postgres.oubnxmdpdosmyrorjiqp password=xxx dbname=postgres host=aws-0-us-east-1.pooler.supabase.com port=5432', closed: 0>"
+       "<connection object at 0x00000206BAD71360; dsn: 'user=postgres.oubnxmdpdosmyrorjiqp password=xxx dbname=postgres host=aws-0-us-east-1.pooler.supabase.com port=5432', closed: 0>"
       ]
      },
      "execution_count": 2,
@@ -53,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
