--- a/test.ipynb
+++ b/test.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "<connection object at 0x00000206BAD71360; dsn: 'user=postgres.oubnxmdpdosmyrorjiqp password=xxx dbname=postgres host=aws-0-us-east-1.pooler.supabase.com port=5432', closed: 0>"
+       "<connection object at 0x00000248BFD1EF00; dsn: 'user=postgres.oubnxmdpdosmyrorjiqp password=xxx dbname=postgres host=aws-0-us-east-1.pooler.supabase.com port=5432', closed: 0>"
       ]
      },
      "execution_count": 2,
@@ -61,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
